--- a/package.json
+++ b/package.json
@@ -19,21 +19,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.2",
     "axios": "^0.18.0",
-    "bcrypt": "^3.0.4",
+    "babel-loader": "^8.0.4",
     "body-parser": "^1.18.3",
+    "clean-webpack-plugin": "^0.1.19",
+    "concurrently": "^4.0.1",
     "cors": "^2.8.5",
+    "css-loader": "^2.1.1",
     "dotenv": "^7.0.0",
-    "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "generate-password": "^1.4.1",
     "humanize-string": "^2.0.0",
     "jsonwebtoken": "^8.5.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "moxios": "^0.4.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
     "nodemailer": "^5.1.1",
+    "node-sass": "^4.9.4",
     "prop-types": "^15.7.2",
     "rc-pagination": "^1.17.8",
     "react": "^16.5.2",
@@ -46,28 +58,22 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
     "sequelize": "^5.1.0",
     "short-id": "^0.1.0",
     "shortid": "^2.2.14",
     "stripe": "^6.28.0",
-    "validator": "^10.11.0"
+    "style-loader": "^0.23.1",
+    "validator": "^10.11.0",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.1.2",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
-    "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "concurrently": "^4.0.1",
-    "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "enzyme-to-json": "^3.3.5",
@@ -76,17 +82,9 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
-    "mini-css-extract-plugin": "^0.4.4",
     "mocha": "^6.0.2",
-    "node-sass": "^4.9.4",
     "nodemon": "^1.18.4",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.22.0",
-    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
   "jest": {
