--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
     "generate-password": "^1.4.1",
+    "html-webpack-plugin": "^3.2.0",
     "humanize-string": "^2.0.0",
     "jsonwebtoken": "^8.5.0",
     "mini-css-extract-plugin": "^0.4.4",
     "moxios": "^0.4.0",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.5",
-    "nodemailer": "^5.1.1",
     "node-sass": "^4.9.4",
+    "nodemailer": "^5.1.1",
     "prop-types": "^15.7.2",
     "rc-pagination": "^1.17.8",
     "react": "^16.5.2",
@@ -72,6 +72,7 @@
     "@babel/register": "^7.4.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
+    "babel-plugin-transform-require-context": "^0.1.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "enzyme": "^3.9.0",
